[package]
name = "s_injector"
description = "A simple injector for wink wink"
author = "x0S4D"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "z"   # Optimize for size.
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations.
panic = "abort"   # Abort on panic
strip = true      # Automatically strip symbols from the binary.


[dependencies]
injrs = "0.1.2"
crossterm = "0.26.1"
console = "0.15.7"
exitcode = "1.1.2"